--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+
 }
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -14,8 +17,9 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -23,6 +27,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures{
+            viewBinding = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -35,7 +42,7 @@ android {
 
 dependencies {
 
-
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -44,7 +51,29 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.google.firebase:firebase-database:20.0.1'
+    //
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.2.1'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //storage................
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.firebaseui:firebase-ui-storage:7.1.0'
+    kapt  'com.github.bumptech.glide:compiler:4.11.0'
+
+    //..............
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     //구글 맵 라이브러리
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+
+//anonymous
+    api 'com.squareup.picasso:picasso:2.71828'
+    implementation 'net.danlew:android.joda:2.10.2'
+
 }
